# cpp-training

./: .gitignore  CMakeLists.txt
build-mingw/: CMakeCache.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake  compile_commands.json
build-mingw/Testing/Temporary/: CTestCostData.txt
configs/: config.yaml
include/: ActionGroup.hpp  ActionTypes.hpp  CmderFactory.hpp  Command.hpp  Pose.h  PoseHandler.hpp  command.h  executor.h  executor_impl.h
outputs/: result.txt
src/: ActionGroup.cpp  CmderFactory.cpp  PoseHandler.cpp  command.cpp  executor.cpp  executor_impl.cpp  main.cpp
tests/: ExecutorTurnRoundTest.cpp  executor_fasttest.cpp  test_executor.cpp  training_main.cpp
